Verify that mdx works with React components in template

--- a/content/blog/2023-08-02-gatsby-remark-copy-button/index.mdx
+++ b/content/blog/2023-08-02-gatsby-remark-copy-button/index.mdx
@@ -15,6 +15,10 @@ keywords:
 openGraphImage: ../../../src/images/open-graph/gatsby.png
 ---
 
+import Button from "../../../src/components/button";
+
+<Button />
+
 Many documentation sites and technical blogs feature a copy to clipboard
 button attached to their syntax highlighted code snippets and commands.
 After a great deal of searching, I was unable to find a
